Bug 513813 - Playlist search doesn’t work
Summary: Playlist search doesn’t work
Status: RESOLVED FIXED
Alias: None
Product: Haruna
Classification: Applications
Component: generic (other bugs)
Version First Reported In: 1.7.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: george fb
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-12-25 19:56 UTC by Eskandar
Modified: 2025-12-25 22:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Video showing off the bug in action. Playlist fails to update when searching for videos with the word cory in it when it should narrow the playlist down to all videos with cory in the file name (3.01 MB, video/webm)
2025-12-25 19:56 UTC, Eskandar
Details
seekbar (69.52 KB, image/jpeg)
2025-12-25 20:32 UTC, george fb
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Eskandar 2025-12-25 19:56:35 UTC
Created attachment 187982 [details]
Video showing off the bug in action. Playlist fails to update when searching for videos with the word cory in it when it should narrow the playlist down to all videos with cory in the file name

SUMMARY
Since the recent update to Haruna 1.7.0-1, when I use the seekbar to search videos in my playlist, it fails to update and goes blank. The expected behaviour is that it shortens the playlist to all videos that contain the keyword in their file name. This wasn’t an issue before updating to this latest version, so I think it is likely a bug that has cropped up.

STEPS TO REPRODUCE
1.  Open up a file with a bunch of videos in a single folder or add videos when Haruna is open
2. Go use the seekbar and type any keyword in the said video's file name, etc.
3. Typing a keyword makes the playlist go blank due to it failing to update, and no videos meant to play after in the playlist play automatically or can be skipped to without clearing the keyword. 


OBSERVED RESULT
Playlist goes blank and doesn't autoplay videos when using the seekbar. 

EXPECTED RESULT
Playlist narrows videos down within the playlist to videos with the typed keyword.

I have attached a video of this, showing off what I mean. The expected behaviour should be that searching for ‘Cory’ should narrow the playlist to all videos that have the file name or media name ‘Cory’, but it doesn’t; instead, it fails to update, and the video doesn’t skip to the next in the playlist.


SOFTWARE/OS VERSIONS
Operating System: EndevourOS
KDE Plasma Version: 6.5.4
KDE Frameworks Version: 6.21.0
Qt Version: 6.10.1
Kernel Version: 6.18.2-arch2-1 (64-bit)
Graphics Platform: Wayland
Processors: 8 x 11th Gen Intel Core i5-1135G7 @ 2.40Hz
Memory: 16 GiB of RAM (15.4 GiB Usable)
Graphics Processor: Intel, Iris Xe Graphics

ADDITIONAL INFORMATION
I am using a Dell Latitude 5320 running EndevourOS, hope that information is useful.
Comment 1 george fb 2025-12-25 20:32:21 UTC
Created attachment 187985 [details]
seekbar

This is a seekbar
Comment 2 Eskandar 2025-12-25 20:36:50 UTC
Comment on attachment 187985 [details]
seekbar

oh right, sorry, I meant search bar for the playlist. You see in the video I attached the search bar doesn't update the playlist when searching for key terms
Comment 3 george fb 2025-12-25 20:37:35 UTC
Git commit 60f3ddf39fa3b0e5789e1fdb3571ff782fa030ab by George Florea Bănuș.
Committed on 25/12/2025 at 20:37.
Pushed by georgefb into branch 'master'.

playlistfilterproxymodel: map Filter enum to PlaylistModel Roles enum

fixes playlist search not working

M  +2    -2    src/playlist/playlistfilterproxymodel.h

https://invent.kde.org/multimedia/haruna/-/commit/60f3ddf39fa3b0e5789e1fdb3571ff782fa030ab
Comment 4 Eskandar 2025-12-25 20:47:19 UTC
(In reply to george fb from comment #3)
> Git commit 60f3ddf39fa3b0e5789e1fdb3571ff782fa030ab by George Florea Bănuș.
> Committed on 25/12/2025 at 20:37.
> Pushed by georgefb into branch 'master'.
> 
> playlistfilterproxymodel: map Filter enum to PlaylistModel Roles enum
> 
> fixes playlist search not working
> 
> M  +2    -2    src/playlist/playlistfilterproxymodel.h
> 
> https://invent.kde.org/multimedia/haruna/-/commit/
> 60f3ddf39fa3b0e5789e1fdb3571ff782fa030ab

Thanks, although I am somewhat confused. Are these steps something I can do to resolve this myself or is it a case that I need to wait for another update? I am sorry I am not super tech literate, so bare with me here
Comment 5 george fb 2025-12-25 22:07:15 UTC
Wait for a  new version or compile it yourself.
Comment 6 Eskandar 2025-12-25 22:33:41 UTC
(In reply to george fb from comment #5)
> Wait for a  new version or compile it yourself.

Cool, thank you for the help and your work on this, genuinely appreciate it