playlistfilterproxymodel: map Filter enum to PlaylistModel Roles enum

fixes playlist search not working

BUG: 513813